# nip

./: CMakeLists.txt  README.md
examples/: a.out  factorial.nip  fib.nip  fib_iter.nip  prime_numbers.nip
include/: ast.h  cfg.h  constexpr.h  dast.h  irgen.h  lexer.h  parser.h  semantic.h  tags  utility.h
src/: CMakeLists.txt  cfg.cpp  constexpr.cpp  driver.cpp  irgen.cpp  lexer.cpp  main.cpp  parser.cpp  semantic.cpp  utility.cpp
